# AI-Virtual-Painter

./: CMakeLists.txt  README.md  main.cpp
Finger_Painter/: FingerPainter.py  HandTracking.py
